# graf

./: .gitignore  README.md  init_graf.ps1  init_graf.sh  pyproject.toml
.claude/: settings.local.json
docs/: requirements.txt
docs/source/: conf.py  index.rst  license.rst  modules.rst
docs/source/tutorials/: How_it_works.ipynb  Introduction.ipynb  ex1_fig1.graf  index.rst
examples/: ex10_colorbar.py  ex11_nonuniform_grid.py  ex12_errorbars.py  ex1_graf.py  ex1_test.GrAF  ex2_graf.py  ex3_graf.py  ex4_graf_3d.py  ex4_line3d.graf  ex5.graf  ex5_graf_twin_y_axis.py  ex5_notwin.graf  ex5_twin.graf  ex6.graf  ex6_image.py  ex6_surf.py  ex7.graf  ex7_image_alt.py  ex7a.graf  ex7a_complex_cbar.py  ex8_subplot_titles.py  ex9_surface_3d.py  rich_plt_show_demo.py
examples/matplotlib types/: ex5.graf  ex6_surf.py  image_plot.py  image_plot_alt.py  line_3d.py  sandbox.py  surface.py  working_twin_ax.py  yaxis_r_ex.py  yaxis_r_ex2.py
matlab/: graf_from_fig.m  graf_load.m  graf_save.m  graf_to_fig.m
src/graf/: base.py  ex1_graf.py  ex1_test.G.json  ex1_test.GrAF  test.g.json  test.graf  widgets.py
src/graf/assets/: portable_fonts.json
src/graf/scripts/: grafmerge.py  grafscript.py  grafviewer.py
tests/: conftest.py  test_edge_cases.py  test_errorbars.py  test_figure_size.py  test_subplots.py  test_surface_2d.py  test_surface_3d.py  test_trace_2d.py  test_trace_3d.py
