[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chillyinductor"
version = "0.0.0"
authors = [
  { name="Grant Giesbrecht", email="grant.giesbrecht@colorado.edu" },
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
	'pandas >= 2.0.0',
	'matplotlib >= 3.9.1',
	'inputimeout >= 1.0.0'
]